--- a/JazdaPodPrad/JazdaPodPrad.csproj
+++ b/JazdaPodPrad/JazdaPodPrad.csproj
@@ -38,7 +38,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
+    <Compile Include="CarImage.cs" />
+    <Compile Include="ColorCar.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="MyCar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
